--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="studio-titlt-text">
                 <h1 class="studio-title">Эффективные решения для вашего бизнеса</h1>
             </div>    
-                <button type="button" class="btn-service">Заказать услугу</button>
+                <button type="button" class="btn-service" data-modal-open>Заказать услугу</button>
         </section>
         <section class="benefits">
             <div class="container">
@@ -292,11 +292,12 @@
         </ul>
         </div>
     </footer>
-<div class="backdrop">
-    <div class="nodal">
-        
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>X</button>
     </div>
 </div>
+<script src="./js/modal.js"></script>
 </body>
 
 </html>
