--- a/index.html
+++ b/index.html
@@ -106,12 +106,17 @@
             <div class="container">
                 <h2 class="about-title">Чем мы занимаемся</h2>
                 <ul class="about-list list">
-                    <li class="about-item"> <img src="./img/image-work-1.jpg" alt="графики" width="370" height="294">
+                    <li class="about-item">
+                        <img src="./img/image-work-1.jpg" alt="графики" width="370" height="294">
+                        <p class="about-top-text">Десктопные приложения</p>
                     </li>
                     <li class="about-item"> <img src="./img/image-work-2.jpg" alt="приложение" width="370" height="294">
+                        <p class="about-top-text">Мобильные приложения</p>
                     </li>
                     <li class="about-item"> <img src="./img/image-work-3.jpg" alt="мобильность" width="370"
-                            height="294"></li>
+                            height="294">
+                        <p class="about-top-text">Дизайнерские решения</p>
+                    </li>
                 </ul>
             </div>
         </section>
