--- a/portfolio.html
+++ b/portfolio.html
@@ -63,56 +63,89 @@
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-2.jpg" alt="Дизайн">
+                <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                    позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div> 
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                  <p class="portfolio-text">Дизайн</p>
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-3.jpg" alt="Приложение">
+                 <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Ресторан Seafood</h3>
                  <p class="portfolio-text">Приложение</p>
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-4.jpg" alt="Маркетинг">
+                 <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Проект Prime</h3>
                  <p class="portfolio-text">Маркетинг</p>
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-5.jpg" alt="Приложение2">
+                 <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Проект Boxes</h3>
                  <p class="portfolio-text">Приложение</p>
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-6.jpg" alt="Веб-сайт2">
+                 <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Inspiration has no Borders</h3>
                  <p class="portfolio-text">Веб-сайт</p>
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-7.jpg" alt="Дизайн2">
+                 <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Издание Limited Edition</h3>
                  <p class="portfolio-text">Дизайн</p>
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-8.jpg" alt="Маркетинг2">
+                 <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Проект LAB</h3>
                  <p class="portfolio-text">Маркетинг</p>
                 </div>
              </li>
              <li class="portfolio-item">
+                <div class="portfolio-top-wrap">
                  <img src="./img/img-9.jpg" alt="Приложение3">
+                 <p class="portfolio-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="container-portfolio">
                  <h3 class="portfolio-title">Growing Business</h3>
                  <p class="portfolio-text">Приложение</p>
