--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     class="header-studio">Studio</span></a>
             <nav class="header-nav">
                 <ul class="header-list list">
-                    <li class="header-item"><a href="#studio" class="header-link link">Студия</a></li>
+                    <li class="header-item"><a href="#studio" class="header-link link current">Студия</a></li>
                     <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
                     <li class="header-item"><a href="#contaсts" class="header-link link">Контакты</a></li>
                 </ul>
